// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockElement in development should render a warning 1`] = `
<span
  style="color: white; background-color: red;"
>
  Unknown block node type.
</span>
`;

exports[`BlockElement in development should render a warning and the children 1`] = `
<div>
  <span
    style="color: white; background-color: red;"
  >
    Unknown block node type.
  </span>
  <p>
    Foo
  </p>
</div>
`;

exports[`BlockElement in production should render null 1`] = `null`;

exports[`BlockElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
